<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Dobrodošli u TalkTVstart!</string>
    <string name="app_name">TalkTV</string>
    <string name="Pregled_kanala">Pregledaj Kanale</string>
    <string name="Nabavi_program">Sinkroniziraj</string>

    <string-array name="expandable_list_sample_action">
        <item>RTL</item>
        <item>Larin izbor</item>
        <item>Vijesti</item>
        <item>In magazin</item>
    </string-array>
        <string name="Facebook">Korisnik</string>
        <string name="kraj">Kraj</string>
        <string name="kanali">kanali</string>
</resources>